tests/NormalTests/paczka1/fuzzy1/22295102.err
Error in line 8: FqCXqw S339 30,9
Error in line 11: M6b4 S587 70,2
Error in line 1: S339 S587 1,1
Error in line 25: FqCXqw S587 95,6
Error in line 24: u46HQ8QSv S587 67,7
Error in line 20: S339 S805 27,7
Error in line 29: S339 S339 30,0
Error in line 26: FqCXqw A786 910,1
Error in line 40: S339 S805 40,20
